--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:3001",
+  }, 
+
   "eslintConfig": {
     "extends": [
       "react-app",
